--- a/src/components/TaskDashboard.css
+++ b/src/components/TaskDashboard.css
@@ -2,7 +2,7 @@
 .task-dashboard {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background-color: #f8fafc;
 }
 
